--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,9 @@ dependencies {
     implementation "com.google.android.material:material:1.11.0"
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
 
+    // Firebase (using BOM)
     implementation platform("com.google.firebase:firebase-bom:32.8.1")
-    implementation "com.google.firebase:firebase-auth-ktx"
-    implementation "com.google.firebase:firebase-firestore-ktx"
+    implementation "com.google.firebase:firebase-auth"
+    implementation "com.google.firebase:firebase-firestore"
 }
+
