--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
@@ -5,6 +6,9 @@
         android:label="AI Diet Tracker"
         android:supportsRtl="true"
         android:theme="@style/Theme.AIDietTracker">
+        <activity
+            android:name=".DietTrackerActivity"
+            android:exported="false" />
         <activity android:name=".ui.DietTrackerActivity" />
         <activity android:name=".ui.DietPlanActivity" />
         <activity android:name=".ui.DashboardActivity" />
@@ -16,6 +20,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
